fixing slider text on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1123,9 +1123,9 @@ figure:focus figcaption {
   }
 }  */
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 480px) {
   .slides-text {
-    padding-top: 15%;
+    padding-top: 10%;
   }
 }
 
